# rust_actix_web

./: .Cargo.toml.swp  .gitignore  Cargo.toml  database.db  package-lock.json  package.json  playwright.config.ts  test-pytest.py
.github/workflows/: ci.yml
src/: main.rs
tests/: package-lock.json  package.json
tests/api/: tasks-api.ts
tests/fixtures/: db-fixtures.ts
tests/tests/: tasks-api.spec.ts
