[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"
log = "0.4"
actix-cors = "0.7"
